# concurrency_uni_module

./: .gitignore  LD1_kolis.cpp  README.md  ld2.go  ld244.go
IP/: CMakeLists.txt  IFF-1-6-Daugardas-Lukšas.docx  duomenys_n75_m75.txt  main.cpp  tyrimas.xlsx
L2/: filters_all.json  filters_none.json  filters_some.json  go.mod  ld2.go  results_all.txt  results_none.txt  results_some.txt
L2_pavyzdine/: main.go
L3/: CMakeLists.txt  data.json  filters_all.json  filters_none.json  filters_some.json  main.cu
lab1/: .gitignore  README.md  filters_all.json  filters_none.json  filters_some.json  lab1-2.cpp  lab1-example-test.cpp  lab1-example2-test.cpp  lab1.cpp  results_openmp.txt
